release/1.9.4/VERSION.md
# 1.9.4

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.9.4```   |
| Release Time   | ```2016-05-10T10:17:16+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.9```   |
| sha1   | ```d7aae43ea69d80cc3441bee4179abd791f6534cd```   |
| size   | ```114464```   |
| total size  | ```121580281```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/d7aae43ea69d80cc3441bee4179abd791f6534cd/1.9.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```4a61c873be90bb1196d68dac7b29870408c56969```   |
| size   | ```8736083```   |
| url       | ```https://piston-data.mojang.com/v1/objects/4a61c873be90bb1196d68dac7b29870408c56969/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```edbb7b1758af33d365bf835eb9d13de005b1e274```   |
| size   | ```9399053```   |
| url       | ```https://piston-data.mojang.com/v1/objects/edbb7b1758af33d365bf835eb9d13de005b1e274/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |